Graph database setup
Have events flowing into the database, wooh!